Bug 15427 - Spotlight results return wrong date in result list
Summary: Spotlight results return wrong date in result list
Status: RESOLVED FIXED
Alias: None
Product: Samba 4.1 and newer
Classification: Unclassified
Component: File services (show other bugs)
Version: unspecified
Hardware: All All
: P5 normal (vote)
Target Milestone: ---
Assignee: Jule Anger
QA Contact: Samba QA Contact
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-07-21 13:31 UTC by Ralph Böhme
Modified: 2023-09-07 09:03 UTC (History)
1 user (show)

See Also:


Attachments
Patch for 4.17 and 4.18 cherry-picked from master (5.38 KB, patch)
2023-07-28 13:11 UTC, Ralph Böhme
jra: review+
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Ralph Böhme 2023-07-21 13:31:04 UTC
Have patch, need bugnumber.
Comment 1 Samba QA Contact 2023-07-26 23:43:04 UTC
This bug was referenced in samba master:

9dc66fecf7c1743d264c5c4f8978b77bab75ed86
620ca1e68d02be45a94aa41217a141d211fceb1f
c2e83ebe726b7bc42b329198214c784936f19888
Comment 2 Samba QA Contact 2023-07-28 12:15:01 UTC
This bug was referenced in samba v4-19-test:

9dc66fecf7c1743d264c5c4f8978b77bab75ed86
620ca1e68d02be45a94aa41217a141d211fceb1f
c2e83ebe726b7bc42b329198214c784936f19888
Comment 3 Samba QA Contact 2023-07-28 12:17:35 UTC
This bug was referenced in samba v4-19-stable (Release samba-4.19.0rc1):

9dc66fecf7c1743d264c5c4f8978b77bab75ed86
620ca1e68d02be45a94aa41217a141d211fceb1f
c2e83ebe726b7bc42b329198214c784936f19888
Comment 4 Ralph Böhme 2023-07-28 13:11:03 UTC
Created attachment 18007 [details]
Patch for 4.17 and 4.18 cherry-picked from master
Comment 5 Jeremy Allison 2023-07-28 23:00:10 UTC
Re-assigning to Jule for inclusion in 4.18.next, 4.17.next.
Comment 6 Jule Anger 2023-07-31 07:35:23 UTC
Pushed to autobuild-v4-{18,17}-test.
Comment 7 Samba QA Contact 2023-07-31 09:12:03 UTC
This bug was referenced in samba v4-17-test:

a6fba5581dbe68c199cb1f043e11e8a36d66d992
c7ee8854d20d68a350a8a2bae2fd915d5211884d
947790f8d76d3aab518116d8af1a55cecf2f67ae
Comment 8 Samba QA Contact 2023-07-31 09:12:28 UTC
This bug was referenced in samba v4-18-test:

aa4db8a3cf82c278380600fa6ce293ac7a7379c3
f4a3373585f0ba0b87763d35bb90054a983109c6
35573c04465820f78642a22231a4040ca855e1e1
Comment 9 Jule Anger 2023-07-31 09:41:20 UTC
Closing out bug report.

Thanks!
Comment 10 Samba QA Contact 2023-08-16 16:58:27 UTC
This bug was referenced in samba v4-18-stable (Release samba-4.18.6):

aa4db8a3cf82c278380600fa6ce293ac7a7379c3
f4a3373585f0ba0b87763d35bb90054a983109c6
35573c04465820f78642a22231a4040ca855e1e1
Comment 11 Samba QA Contact 2023-09-07 09:03:49 UTC
This bug was referenced in samba v4-17-stable (Release samba-4.17.11):

a6fba5581dbe68c199cb1f043e11e8a36d66d992
c7ee8854d20d68a350a8a2bae2fd915d5211884d
947790f8d76d3aab518116d8af1a55cecf2f67ae